--- a/EX1.CSS
+++ b/EX1.CSS
@@ -1,12 +1,12 @@
 h1 {
   color: black;
-  font-size: 32px;
+  font-size 32px;
   text-align: center;
   font-style: italic;
 }
  
 h2 {
-  color: red;
+  color: 58px;
   font-size: 18px;
   font-style: italic;
 }
