--- a/EX1.CSS
+++ b/EX1.CSS
@@ -1,18 +1,18 @@
 h1 {
   color: black;
-  font-size 32px;
+  font-size: 32px;
   text-align: center;
   font-style: italic;
 }
  
 h2 {
-  color: 58px;
+  color: blue;
   font-size: 18px;
   font-style: italic;
 }
  
 p {
   color: green;
-  text-align: center;
+  text-align: left;
   font-style: normal;
 }
