--- a/EX1.CSS
+++ b/EX1.CSS
@@ -1,18 +1,18 @@
 h1 {
-  color: black;
+  color: yellow;
   font-size: 32px;
-  text-align: center;
-  font-style: italic;
+  text-align: left;
+  font-style: bold;
 }
  
 h2 {
-  color: blue;
+  color: white;
   font-size: 18px;
   font-style: italic;
 }
  
 p {
   color: green;
-  text-align: left;
-  font-style: normal;
+  text-align: right;
+  font-size: 12px;
 }
